--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "pixiv-api",
-  "version": "0.0.1",
-  "description": "Fetch Pixiv API",
-  "main": "index.js",
-  "dependencies": {
-    "bluebird": "^3.0.6",
-    "csv-parse": "^1.0.1",
-    "request": "^2.67.0"
-  },
-  "devDependencies": {},
+  "name": "toho-longskirt-quiz",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "keywords": [
-    "pixiv"
-  ],
-  "author": "sairoutine",
-  "license": "MIT"
+  "dependencies": {
+    "bluebird": "^3.1.2",
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "ejs": "~2.3.3",
+    "express": "~4.13.1",
+    "morgan": "~1.6.1",
+    "node-pixiv": "^0.1.1",
+    "request": "^2.67.0",
+    "serve-favicon": "~2.3.0"
+  }
 }
