--- a/package.json
+++ b/package.json
@@ -8,26 +8,26 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "bluebird": "^3.1.2",
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "ejs": "~2.3.3",
-    "express": "~4.13.1",
-    "morgan": "~1.6.1",
-    "node-pixiv": "^0.1.1",
-    "request": "^2.67.0",
-    "mithril": "^0.2.2-rc.1",
-    "serve-favicon": "~2.3.0"
+    "bluebird": "3.1.2",
+    "body-parser": "1.13.2",
+    "cookie-parser": "1.3.5",
+    "debug": "2.2.0",
+    "ejs": "2.5.5",
+    "express": "4.13.1",
+    "morgan": "1.6.1",
+    "node-pixiv": "0.1.1",
+    "request": "2.67.0",
+    "mithril": "0.2.2-rc.1",
+    "serve-favicon": "2.3.0"
   },
   "devDependencies": {
-    "browserify": "^12.0.1",
-    "gulp": "^3.9.0",
-    "gulp-msx": "^0.4.0",
-    "gulp-plumber": "^1.0.1",
-    "gulp-uglify": "^1.5.1",
-    "gulp-watch": "^4.3.5",
-    "run-sequence": "^1.1.5",
-    "vinyl-source-stream": "^1.1.0"
+    "browserify": "12.0.1",
+    "gulp": "3.9.0",
+    "gulp-msx": "0.4.0",
+    "gulp-plumber": "1.0.1",
+    "gulp-uglify": "1.5.1",
+    "gulp-watch": "4.3.5",
+    "run-sequence": "1.1.5",
+    "vinyl-source-stream": "1.1.0"
   }
 }
